src/objects/ADvendio__CampaignItemAccountPayableAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AccountPayable__c</fullName>
        <label>AccountPayable</label>
        <referenceTo>ADvendio__AccountPayable__c</referenceTo>
        <relationshipLabel>CampaignItem Assignments</relationshipLabel>
        <relationshipName>CampaignItemAccountPayableAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Account Payable Assignments</relationshipLabel>
        <relationshipName>CampaignItemAccountPayableAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>ADvendio__Content__c</referenceTo>
        <relationshipLabel>CampaignItem Account Payable Assignments</relationshipLabel>
        <relationshipName>CampaignItemAccountPayableAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsCollective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the record using the &quot;collective Principle&quot;</description>
        <label>Is Collective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>CampaignItem Account Payable Assignments</relationshipLabel>
        <relationshipName>CampaignItemAccountPayableAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>DeliveryData</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CampaignItem Account Payable Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CIP-{00000000}</displayFormat>
        <label>CiP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CampaignItem Account Payable Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>